k8s/mom-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mom-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: mom
  template:
    metadata:
      labels:
        component: mom
    spec:
      containers:
        - name: mom
          image: oliverloenning/si-rabbitmq
          ports:
            - containerPort: 4369
            - containerPort: 5671
            - containerPort: 5672
            - containerPort: 25672
            - containerPort: 15675
