k8s/mom-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mom-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: mom
  ports:
    - port: 15675
      targetPort: 15675
